[package]
name = "channelwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "channelwasm"

[dependencies]
wasm-bindgen = "0.2"
channel = { path = "../channel", version = "^0.1.0" }
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.208"
serde_json = "1.0.117"
